# deep-learning-from-scratch

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
attention/: __init__.py  flash_attention.py  grouped_query.py  mhsa.py  multi_head.py  scaled_dot_product.py  sliding_window.py
autoencoders/: __init__.py  autoencoder.py  data.py  denoising.py  train.py  vae.py  visualize.py
autograd/: __init__.py
contrastive_learning/: README.md  __init__.py  clip.py  losses.py  mae.py  simclr.py  train.py
diffusion/: __init__.py  ddpm.py  unet.py
dim_reduction/: __init__.py  pca.py  test_on_cifar.py  tsne.py  umap.py
flow_matching/: flow_matching.py
fourier_features/: __init__.py  gaussian.py  positional.py
gpt/: __init__.py  config.py  data.py  layers.py  model.py  tokenizer.py  train.py
jax-equivalents/: README.md
losses-and-metrics/: README.md
losses_and_metrics/: __init__.py  contrastive.py  cross_entropy.py  metrics.py  mse.py
low_rank/: README.md  __init__.py  apply.py  dora.py  lora.py  svd_compress.py
neural_implicit_representation/: __init__.py  deep_sdf.py  inr.py  nerf.py  siren.py  wire.py
nn-modules/: README.md
nn_modules/: README.py  __init__.py  activation.py  batchnorm.py  conv.py  dropout.py  embedding.py  linear.py  pooling.py
notebooks/: vit_tiny_imagenet.ipynb
optimizers/: __init__.py  adam.py  lbfgs.py  lr_scheduler.py  rmsprop.py  second_order.py  sgd.py
positional-encodings/: README.md
positional_encoding/: __init__.py  alibi.py  learned.py  rope.py  sinusoidal.py
tokenizers/: __init__.py  (+4 more)
(+36 files in other folders)
